correcion de bugs y nuevo invisible captcha google

--- a/css/site.css
+++ b/css/site.css
@@ -99,3 +99,7 @@ img.imgServices{
 .text-muted > p {
   text-align: justify;
 }
+
+.img-portfolio {
+  width: 255px !important
+}
